objects/TRWaySales__ReminderToParkOpportunityV1__mdt.object
<CustomObject>
    <fields>
        <fullName>TRWaySales__Language_Code__c</fullName>
        <label>Language Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRWaySales__Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRWaySales__Sequence__c</fullName>
        <label>Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRWaySales__Text_Body__c</fullName>
        <label>Text Body</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ReminderToParkOpportunityV1</label>
    <pluralLabel>ReminderToParkOpportunitiesV1</pluralLabel>
</CustomObject>